# poetry-demo

./: .gitignore  makefile  pyproject.toml
.github/workflows/: ci.yaml
