[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Guillermo Alicea <g.alicea@draftkings.com>"]

[[tool.poetry.source]]
name = "pypi_"
url = "https://pypi.org/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
